- added commented-out plugins to build source and javadoc jar files

--- a/csvdict/pom.xml
+++ b/csvdict/pom.xml
@@ -43,8 +43,8 @@
                   </goals>
                 </execution>
               </executions>
-            </plugin>                        
-        </plugins>-->
+            </plugin> -->                       
+        </plugins>
     </build>
     <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
